# pc

./: Cargo.toml  default_config.toml
src/: main.rs  types.rs  utils.rs
src/backends/: dpaste.rs  dpaste_com.rs  fiche.rs  haste.rs  ix.rs  modern_paste.rs  onetimesecret.rs  paste_rs.rs  pipfi.rs  sprunge.rs  ubuntu.rs  vpaste.rs
