[package]
name = "pc"
version = "0.1.0"
authors = ["Samuel Walladge <samuel@swalladge.net>"]
description = "Command line client for pastebins"
readme = "README.md"
keywords = ["cli", "pastebin"]
repository = "https://github.com/swalladge/pc/"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.12.7", features = ["multipart", "blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
toml = "0.8.19"
url = "2.5.2"
lazy_static = "1.3.0"
humantime = "2.1.0"
